# PortWise

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config.example.yaml  pyproject.toml
.github/workflows/: tests.yml
_fixpack/: PT1_nse_parsing.txt  PT2_client_report.txt  PT3_web_depth.txt  PT4_tls_ciphers.txt  PT5_evidence_capture.txt  PT6_module_depth.txt  PT7_default_cred_notes.txt
examples/: grouped_discovery.xml  grouped_tcp_top_1000.xml  sample_nmap.xml  sample_report.json  sample_run.json  targets.txt
examples/sample_reports/: PortWise_Report.html  PortWise_Report.xlsx
live/: badssl-3des.txt  badssl-dh1024.txt  badssl-expired.txt  badssl-mozilla-modern.txt  badssl-self-signed.txt  badssl-sha256.txt  badssl-tls-v1-0.txt  badssl-tls-v1-1.txt  badssl-tls-v1-2.txt  badssl-wrong.host.txt  testaspnet.txt
live/badssl-expired/: report.html
live/scanme/: report.html
live/testaspnet/: report.html
portwise/: __init__.py  cli.py
portwise/core/: __init__.py  config.py  doctor.py  external_tool.py  models.py  module_runner.py  progress.py  routing.py  runner.py  scope.py  service_groups.py  workspace.py
portwise/intelligence/: __init__.py  aggregation.py  auth_checks.py  confidence.py  constants.py  correlation.py  credentials.py  cve_enrichment.py  cve_placeholder.py  cvss.py  default_creds.py  exploit_intel.py  false_positive.py  handoff.py  importers.py  poc.py  risk_scoring.py  screenshots.py  service_exploits.py  threat_intel.py  version_match.py  web_engines.py
portwise/modules/: __init__.py  base.py  registry.py  results.py
portwise/reporting/: _html_common.py  csv_report.py  customization.py  excel_report.py  html_report.py  narrative.py  (+5 more)
tests/: test_authenticated.py  test_cleanup.py  test_confidence.py  test_cve.py  test_default_creds.py  test_evidence_capture.py  test_exploit_intel.py  test_false_positive.py  test_html_report.py  test_http_client.py  test_http_probe_and_tech.py  test_http_service_deadline.py  test_js_analysis.py  test_models.py  test_module_runner_lifecycle.py  test_mvp_modules_reports.py  test_named_target_identity.py  test_native_connect_scan.py  test_native_nuclei_engine.py  test_nmap_routing.py  test_nse.py  test_packaging.py  test_page_detection.py  test_parallelism.py  test_pentest_report.py  test_phase0_foundation.py  test_phase4_depth_vhost.py  test_phase_d_discovery.py  test_phase_e_content_fuzzer.py  test_phase_j_ad_impacket.py  test_phase_l_hardening.py  test_phase_m_credential_reuse.py  test_phase_n_attack_paths.py  test_phase_o_scope.py  test_phase_p_reporting.py  test_poc.py  test_prerelease_hardening.py  test_progress.py  test_protocol_depth.py  test_pt_buddy.py  (+16 more)
tools/: sync_nuclei_templates.py  validate_transport_fingerprint.py
(+88 files in other folders)
