[build-system]
requires = [
  "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "portwise"
version = "0.1.0"
description = "Safe, evidence-first VAPT intelligence and reporting toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "PortWise Contributors" },
]
dependencies = [
  "PyYAML>=6.0",
  "openpyxl>=3.1",
  "requests>=2.31",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
portwise = "portwise.cli:main"

[tool.setuptools.packages.find]
where = [
  ".",
]
include = [
  "portwise*",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
pythonpath = [
  ".",
]
