[build-system]
requires = [
  "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "portwise"
version = "0.7.0"
description = "Penetration-testing orchestration, correlation, and evidence-backed reporting platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "PortWise Contributors" },
]
dependencies = [
  "PyYAML>=6.0",
  "curl_cffi>=0.13",
  "openpyxl>=3.1",
  "packaging>=23.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
browser = [
  "playwright>=1.45",
]

[project.scripts]
portwise = "portwise.cli:main"

[tool.setuptools.packages.find]
where = [
  ".",
]
include = [
  "portwise*",
]

[tool.setuptools.package-data]
portwise = [
  "data/wappalyzer/*.json",
  "data/wappalyzer/*.md",
  "data/wordlists/*.txt",
  "data/nuclei/*.yaml",
  "data/nuclei/*.yml",
  "data/nuclei/*.json",
  "data/nuclei/*.md",
  "data/nuclei/templates/*.yaml",
  "data/nuclei/templates/*.yml",
  "data/exploitdb/*.csv",
  "data/exploitdb/*.md",
  "data/secrets/*.toml",
  "data/secrets/*.md",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
pythonpath = [
  ".",
]
